--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
-    <string name="app_name">Squash Lands SCC 2020</string>
+    <string name="app_name">Squashie Project</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="welcome">Welcome!</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="search_hint">Search your favourite song</string>
 </resources>
